--- a/layout/header.scss
+++ b/layout/header.scss
@@ -112,6 +112,7 @@ header {
     }
   }
 }
+
 @media only screen and (max-width: 1500px) {
   header {
     .topnav {
@@ -131,17 +132,19 @@ header {
       }
       .topnav_menu {
         height: 100vh;
+        width: 100vw;
         padding: 10%;
         backdrop-filter: blur(15px);
-        z-index: 99;
         @include displayCenterColumn;
         position: absolute;
+        z-index: 99;
         top: 0;
         right: 0;
-        // transform: translateX(100%);
-        // transition: transform 0.8s;
+        transform: translateX(100%);
+        transition: transform 0.8s;
       }
       .topnav_menu.active {
+        transform: none;
         display: block;
         position: fixed;
         left: 0;
@@ -176,7 +179,6 @@ header {
 @media only screen and (max-width: 450px) {
   header {
     .topnav {
-      position: relative;
       .topnav_menu {
         display: none;
       }
