--- a/layout/why_choose_us.scss
+++ b/layout/why_choose_us.scss
@@ -1,7 +1,7 @@
 main {
   .why_choose_us {
     width: 100%;
-    min-height: 200vh;
+
     position: relative;
     .circle_food {
       position: absolute;
@@ -27,11 +27,12 @@ main {
   }
   .about_us {
     position: relative;
-    z-index: -2;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 6rem;
     padding: 13% 0 0% 0%;
+    margin-bottom: 4rem;
     .title_about_us {
       width: 100%;
       text-align: center;
@@ -47,11 +48,11 @@ main {
         font-family: "Kanit", sans-serif;
         font-weight: 400;
       }
-      .icon_about_absolute {
-        position: absolute;
-        top: 0;
-        right: 10%;
-      }
+    }
+    .icon_about_absolute {
+      position: absolute;
+      top: 20%;
+      right: 20%;
     }
     .about_us_absolute {
       position: absolute;
@@ -63,24 +64,39 @@ main {
       text-transform: uppercase;
     }
     .contenu_about_us {
-      margin: 7% 22%;
+      width: 45%;
       display: flex;
+      img {
+        display: block;
+        max-height: 600px;
+        max-width: 60%;
+      }
       .text_about_us {
-        padding: 7%;
-        line-height: 50px;
+        padding: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        text-align: justify;
         p {
           font-size: 1.5rem;
+          line-height: 3rem;
           margin-bottom: 60px;
         }
         .btn_about_us {
+          font-size: 1.2rem;
+          word-spacing: 0.3rem;
           background-color: $or;
           padding: 20px 30px;
+          border: none;
           border-radius: 5px;
-          font-family: "brands";
           font-weight: 500;
           color: $white;
-          font-family: "Kanit", sans-serif;
-
+          font-weight: 600;
+          &:hover {
+            cursor: pointer;
+            background-color: #dbb975;
+            color: $white;
+          }
           i {
             padding-left: 10px;
           }
@@ -89,6 +105,9 @@ main {
     }
   }
 }
+
+// @media only screen and(max-width:1760px) {
+// }
 @media only screen and (max-width: 1500px) {
   .why_choose_us {
     .images_top_choose_us {
@@ -111,9 +130,6 @@ main {
           transform: translateX(-50%);
           width: 100px;
         }
-      }
-      .contenu_about_us {
-        width: 90%;
       }
     }
   }
@@ -146,15 +162,12 @@ main {
         }
         .icon_about_absolute {
           top: 0;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 100px;
+          right: 0;
         }
       }
       .contenu_about_us {
-        margin: 15% 5%;
         flex-direction: column;
-        text-align: center;
+        align-items: center;
       }
     }
   }
