--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ header {
   background: url(img/slider/img_bg_slider_home01.jpg) no-repeat;
 }
 header .container_header {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   height: 100%;
   width: 100%;
 }
@@ -37,16 +38,16 @@ header .topnav .topnav_menu .nav_links2 {
 }
 header .topnav .topnav_menu .nav_links .home,
 header .topnav .topnav_menu .nav_links2 .home {
-  color: #C8A96A;
+  color: #c8a96a;
 }
 header .topnav .topnav_menu .nav_links li a,
 header .topnav .topnav_menu .nav_links2 li a {
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: "Kanit", sans-serif;
 }
 header .topnav .topnav_menu .nav_links li a:hover,
 header .topnav .topnav_menu .nav_links2 li a:hover {
-  color: #C8A96A;
+  color: #c8a96a;
 }
 header .topnav .topnav_menu .nav_links li a i,
 header .topnav .topnav_menu .nav_links2 li a i {
@@ -58,7 +59,7 @@ header .topnav .topnav_menu .nav_links2 li img {
 }
 header .topnav .topnav_menu .nav_links li .btn_nav,
 header .topnav .topnav_menu .nav_links2 li .btn_nav {
-  background-color: #C8A96A;
+  background-color: #c8a96a;
   padding: 20px 30px;
   border-radius: 5px;
   font-weight: 600;
@@ -66,8 +67,8 @@ header .topnav .topnav_menu .nav_links2 li .btn_nav {
 }
 header .topnav .topnav_menu .nav_links li .btn_nav:hover,
 header .topnav .topnav_menu .nav_links2 li .btn_nav:hover {
-  background-color: #FFFFFF;
-  color: #C8A96A;
+  background-color: #ffffff;
+  color: #c8a96a;
 }
 header .topnav .topnav_menu .nav_links li .btn_nav i,
 header .topnav .topnav_menu .nav_links2 li .btn_nav i {
@@ -125,6 +126,11 @@ header .contenu_header a i {
   font-weight: 600;
   padding-left: 10px;
 }
+@media only screen and (min-width: 1501px) {
+  header .topnav .topnav_menu {
+    display: flex !important;
+  }
+}
 
 @media only screen and (max-width: 1500px) {
   header .topnav .icon_hamburger {
@@ -143,18 +149,22 @@ header .contenu_header a i {
   }
   header .topnav .topnav_menu {
     height: 100vh;
+    width: 100vw;
     padding: 10%;
     backdrop-filter: blur(15px);
-    z-index: 99;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     position: absolute;
+    z-index: 99;
     top: 0;
     right: 0;
+    transform: translateX(100%);
+    transition: transform 0.8s;
   }
   header .topnav .topnav_menu.active {
+    transform: none;
     display: block;
     position: fixed;
     left: 0;
@@ -180,9 +190,6 @@ header .contenu_header a i {
   }
 }
 @media only screen and (max-width: 450px) {
-  header .topnav {
-    position: relative;
-  }
   header .topnav .topnav_menu {
     display: none;
   }
@@ -200,7 +207,7 @@ header .contenu_header a i {
   }
 }
 .bg_color {
-  background-color: #FAF6F0;
+  background-color: #faf6f0;
 }
 .bg_color .choose_your_best_category {
   width: 100%;
@@ -220,7 +227,7 @@ header .contenu_header a i {
   left: 2%;
   top: 0;
   font-size: 10vw;
-  color: #F5EEE3;
+  color: #f5eee3;
 }
 .bg_color .choose_your_best_category .title_choose_your_category {
   z-index: 1;
@@ -247,19 +254,19 @@ header .contenu_header a i {
   z-index: 1;
   width: 170px;
   height: 200px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   font-size: 22px;
 }
 .bg_color .choose_your_best_category .cards .card:hover {
-  background-color: #C8A96A;
+  background-color: #c8a96a;
 }
 .bg_color .choose_your_best_category .cards .card:hover p,
 .bg_color .choose_your_best_category .cards .card:hover i {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .bg_color .choose_your_best_category .cards .card:hover .icon_choose_category {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .bg_color .choose_your_best_category .cards .card i {
   padding-top: 9px;
@@ -267,7 +274,7 @@ header .contenu_header a i {
 .bg_color .choose_your_best_category .cards .card .icon_choose_category {
   font-size: 50px;
   padding: 32px 30px 20px 30px;
-  color: #C8A96A;
+  color: #c8a96a;
 }
 
 @media only screen and (max-width: 1400px) {
@@ -290,7 +297,6 @@ header .contenu_header a i {
 }
 main .why_choose_us {
   width: 100%;
-  min-height: 200vh;
   position: relative;
 }
 main .why_choose_us .circle_food {
@@ -299,7 +305,7 @@ main .why_choose_us .circle_food {
   top: 0;
   transform: translateY(-20%) translateX(-50%);
   border-radius: 50%;
-  border: solid 30px #FFFFFF;
+  border: solid 30px #ffffff;
   width: 40vw;
 }
 main .why_choose_us .images_top_choose_us {
@@ -316,11 +322,12 @@ main .why_choose_us .images_top_choose_us img {
 }
 main .about_us {
   position: relative;
-  z-index: -2;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 6rem;
   padding: 13% 0 0% 0%;
+  margin-bottom: 4rem;
 }
 main .about_us .title_about_us {
   width: 100%;
@@ -338,40 +345,56 @@ main .about_us .title_about_us p {
   font-family: "Kanit", sans-serif;
   font-weight: 400;
 }
-main .about_us .title_about_us .icon_about_absolute {
+main .about_us .icon_about_absolute {
   position: absolute;
-  top: 0;
-  right: 10%;
+  top: 20%;
+  right: 20%;
 }
 main .about_us .about_us_absolute {
   position: absolute;
   left: 2%;
   top: 10%;
   font-size: 10vw;
-  color: #F5EEE3;
+  color: #f5eee3;
   z-index: -1;
   text-transform: uppercase;
 }
 main .about_us .contenu_about_us {
-  margin: 7% 22%;
+  width: 45%;
   display: flex;
 }
+main .about_us .contenu_about_us img {
+  display: block;
+  max-height: 600px;
+  max-width: 60%;
+}
 main .about_us .contenu_about_us .text_about_us {
-  padding: 7%;
-  line-height: 50px;
+  padding: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  text-align: justify;
 }
 main .about_us .contenu_about_us .text_about_us p {
   font-size: 1.5rem;
+  line-height: 3rem;
   margin-bottom: 60px;
 }
 main .about_us .contenu_about_us .text_about_us .btn_about_us {
-  background-color: #C8A96A;
+  font-size: 1.2rem;
+  word-spacing: 0.3rem;
+  background-color: #c8a96a;
   padding: 20px 30px;
+  border: none;
   border-radius: 5px;
-  font-family: "brands";
   font-weight: 500;
-  color: #FFFFFF;
-  font-family: "Kanit", sans-serif;
+  color: #ffffff;
+  font-weight: 600;
+}
+main .about_us .contenu_about_us .text_about_us .btn_about_us:hover {
+  cursor: pointer;
+  background-color: #dbb975;
+  color: #ffffff;
 }
 main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   padding-left: 10px;
@@ -394,9 +417,6 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
     transform: translateX(-50%);
     width: 100px;
   }
-  .why_choose_us .about_us .contenu_about_us {
-    width: 90%;
-  }
 }
 @media only screen and (max-width: 1200px) {
   .why_choose_us .images_top_choose_us img {
@@ -416,14 +436,11 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   }
   .why_choose_us .about_us .title_about_us .icon_about_absolute {
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100px;
+    right: 0;
   }
   .why_choose_us .about_us .contenu_about_us {
-    margin: 15% 5%;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
   }
 }
 @media only screen and (max-width: 700px) {
@@ -440,7 +457,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-color: #FAF6F0;
+  background-color: #faf6f0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -475,7 +492,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   font-size: 10vw;
   letter-spacing: 1rem;
   z-index: -1;
-  color: #F5EEE3;
+  color: #f5eee3;
 }
 
 .title_special_offer {
@@ -510,7 +527,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .contenu_try_your_special_offer .cards:hover {
   cursor: pointer;
-  outline: dashed 2px #C8A96A;
+  outline: dashed 2px #c8a96a;
 }
 .contenu_try_your_special_offer .cards .prix {
   font-size: 2.5rem;
@@ -532,7 +549,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .latest-news .p-top {
   position: absolute;
-  color: #FAF6F0;
+  color: #faf6f0;
   top: 0;
   left: 3%;
   font-size: 10vw;
@@ -566,7 +583,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 
 .news {
   width: 30%;
-  background-color: #FAF6F0;
+  background-color: #faf6f0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -580,7 +597,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   height: 100%;
 }
 .news button {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   font-weight: bold;
   font-size: 1rem;
   width: 60%;
@@ -591,8 +608,8 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .news button:hover {
   cursor: pointer;
-  background-color: #C8A96A;
-  color: #FFFFFF;
+  background-color: #c8a96a;
+  color: #ffffff;
 }
 
 .news-text {
@@ -612,7 +629,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   gap: 1rem;
 }
 .date-user i {
-  color: #C8A96A;
+  color: #c8a96a;
 }
 .date-user p {
   height: auto;
@@ -730,7 +747,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   padding-bottom: 10rem;
 }
 .meet-chefs p {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .meet-chefs .p-top {
   position: absolute;
@@ -743,7 +760,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 
 .chefs-title {
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -774,10 +791,12 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   width: 100%;
 }
 .chef-img:nth-child(2) {
-  box-shadow: 5em 10em 10em rgba(255, 255, 255, 0.13), 5em -6em 10em rgba(255, 255, 255, 0.13);
+  box-shadow: 5em 10em 10em rgba(255, 255, 255, 0.13),
+    5em -6em 10em rgba(255, 255, 255, 0.13);
 }
 .chef-img:nth-child(3) {
-  box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13), -5em -6em 10em rgba(255, 255, 255, 0.178);
+  box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13),
+    -5em -6em 10em rgba(255, 255, 255, 0.178);
 }
 
 @media (max-width: 760px) {
@@ -801,7 +820,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 .restaurant-photos-container button {
   font-size: 1rem;
   padding: 1rem 2rem;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   font-weight: bold;
   border: 1px solid rgba(199, 199, 199, 0.452);
   border-radius: 0.3rem;
@@ -810,11 +829,11 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 .restaurant-photos-container button:hover {
   cursor: pointer;
   color: white;
-  background-color: #C8A96A;
+  background-color: #c8a96a;
 }
 .restaurant-photos-container .p-low {
   position: absolute;
-  color: #FAF6F0;
+  color: #faf6f0;
   top: 0;
   left: 1%;
   font-size: 11vw;
@@ -971,7 +990,7 @@ footer {
 }
 .footer-link-input .email-input button:hover {
   cursor: pointer;
-  background-color: #C8A96A;
+  background-color: #c8a96a;
 }
 
 .footer-bottom {
