--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ header {
   background: url(img/slider/img_bg_slider_home01.jpg) no-repeat;
 }
 header .container_header {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   height: 100%;
   width: 100%;
 }
@@ -38,16 +37,16 @@ header .topnav .topnav_menu .nav_links2 {
 }
 header .topnav .topnav_menu .nav_links .home,
 header .topnav .topnav_menu .nav_links2 .home {
-  color: #c8a96a;
+  color: #C8A96A;
 }
 header .topnav .topnav_menu .nav_links li a,
 header .topnav .topnav_menu .nav_links2 li a {
-  color: #ffffff;
+  color: #FFFFFF;
   font-family: "Kanit", sans-serif;
 }
 header .topnav .topnav_menu .nav_links li a:hover,
 header .topnav .topnav_menu .nav_links2 li a:hover {
-  color: #c8a96a;
+  color: #C8A96A;
 }
 header .topnav .topnav_menu .nav_links li a i,
 header .topnav .topnav_menu .nav_links2 li a i {
@@ -59,7 +58,7 @@ header .topnav .topnav_menu .nav_links2 li img {
 }
 header .topnav .topnav_menu .nav_links li .btn_nav,
 header .topnav .topnav_menu .nav_links2 li .btn_nav {
-  background-color: #c8a96a;
+  background-color: #C8A96A;
   padding: 20px 30px;
   border-radius: 5px;
   font-weight: 600;
@@ -67,8 +66,8 @@ header .topnav .topnav_menu .nav_links2 li .btn_nav {
 }
 header .topnav .topnav_menu .nav_links li .btn_nav:hover,
 header .topnav .topnav_menu .nav_links2 li .btn_nav:hover {
-  background-color: #ffffff;
-  color: #c8a96a;
+  background-color: #FFFFFF;
+  color: #C8A96A;
 }
 header .topnav .topnav_menu .nav_links li .btn_nav i,
 header .topnav .topnav_menu .nav_links2 li .btn_nav i {
@@ -125,11 +124,6 @@ header .contenu_header a:hover {
 header .contenu_header a i {
   font-weight: 600;
   padding-left: 10px;
-}
-@media only screen and (min-width: 1501px) {
-  header .topnav .topnav_menu {
-    display: flex !important;
-  }
 }
 
 @media only screen and (max-width: 1500px) {
@@ -207,7 +201,7 @@ header .contenu_header a i {
   }
 }
 .bg_color {
-  background-color: #faf6f0;
+  background-color: #FAF6F0;
 }
 .bg_color .choose_your_best_category {
   width: 100%;
@@ -227,7 +221,7 @@ header .contenu_header a i {
   left: 2%;
   top: 0;
   font-size: 10vw;
-  color: #f5eee3;
+  color: #F5EEE3;
 }
 .bg_color .choose_your_best_category .title_choose_your_category {
   z-index: 1;
@@ -254,19 +248,19 @@ header .contenu_header a i {
   z-index: 1;
   width: 170px;
   height: 200px;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   color: black;
   font-size: 22px;
 }
 .bg_color .choose_your_best_category .cards .card:hover {
-  background-color: #c8a96a;
+  background-color: #C8A96A;
 }
 .bg_color .choose_your_best_category .cards .card:hover p,
 .bg_color .choose_your_best_category .cards .card:hover i {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .bg_color .choose_your_best_category .cards .card:hover .icon_choose_category {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .bg_color .choose_your_best_category .cards .card i {
   padding-top: 9px;
@@ -274,7 +268,7 @@ header .contenu_header a i {
 .bg_color .choose_your_best_category .cards .card .icon_choose_category {
   font-size: 50px;
   padding: 32px 30px 20px 30px;
-  color: #c8a96a;
+  color: #C8A96A;
 }
 
 @media only screen and (max-width: 1400px) {
@@ -305,7 +299,7 @@ main .why_choose_us .circle_food {
   top: 0;
   transform: translateY(-20%) translateX(-50%);
   border-radius: 50%;
-  border: solid 30px #ffffff;
+  border: solid 30px #FFFFFF;
   width: 40vw;
 }
 main .why_choose_us .images_top_choose_us {
@@ -355,7 +349,7 @@ main .about_us .about_us_absolute {
   left: 2%;
   top: 10%;
   font-size: 10vw;
-  color: #f5eee3;
+  color: #F5EEE3;
   z-index: -1;
   text-transform: uppercase;
 }
@@ -383,18 +377,18 @@ main .about_us .contenu_about_us .text_about_us p {
 main .about_us .contenu_about_us .text_about_us .btn_about_us {
   font-size: 1.2rem;
   word-spacing: 0.3rem;
-  background-color: #c8a96a;
+  background-color: #C8A96A;
   padding: 20px 30px;
   border: none;
   border-radius: 5px;
   font-weight: 500;
-  color: #ffffff;
+  color: #FFFFFF;
   font-weight: 600;
 }
 main .about_us .contenu_about_us .text_about_us .btn_about_us:hover {
   cursor: pointer;
   background-color: #dbb975;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   padding-left: 10px;
@@ -457,7 +451,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-color: #faf6f0;
+  background-color: #FAF6F0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -491,12 +485,12 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   left: 3%;
   font-size: 10vw;
   letter-spacing: 1rem;
-  z-index: -1;
-  color: #f5eee3;
+  z-index: 1;
+  color: #F5EEE3;
 }
 
 .title_special_offer {
-  z-index: 1;
+  z-index: 2;
   text-align: center;
 }
 .title_special_offer h2 {
@@ -527,7 +521,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .contenu_try_your_special_offer .cards:hover {
   cursor: pointer;
-  outline: dashed 2px #c8a96a;
+  outline: dashed 2px #C8A96A;
 }
 .contenu_try_your_special_offer .cards .prix {
   font-size: 2.5rem;
@@ -549,7 +543,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .latest-news .p-top {
   position: absolute;
-  color: #faf6f0;
+  color: #FAF6F0;
   top: 0;
   left: 3%;
   font-size: 10vw;
@@ -583,7 +577,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 
 .news {
   width: 30%;
-  background-color: #faf6f0;
+  background-color: #FAF6F0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -597,7 +591,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   height: 100%;
 }
 .news button {
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   font-weight: bold;
   font-size: 1rem;
   width: 60%;
@@ -608,8 +602,8 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 .news button:hover {
   cursor: pointer;
-  background-color: #c8a96a;
-  color: #ffffff;
+  background-color: #C8A96A;
+  color: #FFFFFF;
 }
 
 .news-text {
@@ -629,7 +623,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   gap: 1rem;
 }
 .date-user i {
-  color: #c8a96a;
+  color: #C8A96A;
 }
 .date-user p {
   height: auto;
@@ -747,7 +741,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   padding-bottom: 10rem;
 }
 .meet-chefs p {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .meet-chefs .p-top {
   position: absolute;
@@ -760,7 +754,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 }
 
 .chefs-title {
-  color: #ffffff;
+  color: #FFFFFF;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -791,12 +785,10 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
   width: 100%;
 }
 .chef-img:nth-child(2) {
-  box-shadow: 5em 10em 10em rgba(255, 255, 255, 0.13),
-    5em -6em 10em rgba(255, 255, 255, 0.13);
+  box-shadow: 5em 10em 10em rgba(255, 255, 255, 0.13), 5em -6em 10em rgba(255, 255, 255, 0.13);
 }
 .chef-img:nth-child(3) {
-  box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13),
-    -5em -6em 10em rgba(255, 255, 255, 0.178);
+  box-shadow: -5em 10em 10em rgba(255, 255, 255, 0.13), -5em -6em 10em rgba(255, 255, 255, 0.178);
 }
 
 @media (max-width: 760px) {
@@ -820,7 +812,7 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 .restaurant-photos-container button {
   font-size: 1rem;
   padding: 1rem 2rem;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   font-weight: bold;
   border: 1px solid rgba(199, 199, 199, 0.452);
   border-radius: 0.3rem;
@@ -829,11 +821,11 @@ main .about_us .contenu_about_us .text_about_us .btn_about_us i {
 .restaurant-photos-container button:hover {
   cursor: pointer;
   color: white;
-  background-color: #c8a96a;
+  background-color: #C8A96A;
 }
 .restaurant-photos-container .p-low {
   position: absolute;
-  color: #faf6f0;
+  color: #FAF6F0;
   top: 0;
   left: 1%;
   font-size: 11vw;
@@ -990,7 +982,7 @@ footer {
 }
 .footer-link-input .email-input button:hover {
   cursor: pointer;
-  background-color: #c8a96a;
+  background-color: #C8A96A;
 }
 
 .footer-bottom {
